// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Enroll Profile Transformer Tests should add link to log in when select-identify step exists in remediation 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.registration.form.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.form.field.optional.description",
        },
        "type": "Description",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.firstName",
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.lastName",
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.email",
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "label": "oie.registration.form.submit",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
      {
        "type": "Divider",
      },
      {
        "elements": [
          {
            "options": {
              "content": "haveaccount",
              "dataSe": "haveaccount",
            },
            "type": "Description",
          },
          {
            "contentType": "footer",
            "options": {
              "label": "signin",
              "step": "select-identify",
            },
            "type": "Link",
          },
        ],
        "type": "HorizontalLayout",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Profile Transformer Tests should add password requirements along with title, and submit button when passcode and password settings exists 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.registration.form.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.form.field.optional.description",
        },
        "type": "Description",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.firstName",
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.lastName",
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.email",
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "noMargin": true,
        "options": {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": [
            {
              "label": "password.complexity.number.description",
              "ruleKey": "minNumber",
            },
            {
              "label": "password.complexity.symbol.description",
              "ruleKey": "minSymbol",
            },
          ],
          "settings": {
            "complexity": {
              "minNumber": 1,
              "minSymbol": 1,
            },
          },
          "userInfo": {},
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      {
        "label": "Password",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "label": "oie.registration.form.submit",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Profile Transformer Tests should not add password requirements but should add title, password, and button elements when passcode exists but password settings are empty 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.registration.form.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.form.field.optional.description",
        },
        "type": "Description",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.firstName",
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.lastName",
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.email",
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "label": "Password",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "label": "oie.registration.form.submit",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Enroll Profile Transformer Tests should only add title and submit button when select-identify doesnt exist in available steps and passcode element doesnt exist in schema 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.registration.form.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.form.field.optional.description",
        },
        "type": "Description",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.firstName",
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.lastName",
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "options": {
          "inputMeta": {
            "name": "userProfile.email",
            "validate": true,
          },
          "type": "string",
        },
        "type": "Field",
      },
      {
        "label": "oie.registration.form.submit",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
